fine tune custom scrollbar issue

--- a/zul/src/archive/web/js/zul/grid/less/grid.less
+++ b/zul/src/archive/web/js/zul/grid/less/grid.less
@@ -21,6 +21,7 @@
 	//grid header
 	&-header {
 		.resetTable();
+		position: relative;
 		overflow: hidden;
 		width: 100%;
 		&.z-grid-header-bar {
