--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -20,6 +20,7 @@
 	zoom: 1;
 	//listbox header
 	&-header {
+		position: relative;
 		overflow: hidden;
 		width: 100%;
 		.resetTable();
